# hands-on-rust-course

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
examples/hello/: Cargo.toml  README.md
examples/hello/src/: main.rs
